specta-jsonschema/tests/snapshots/enums__adjacent-tagging.snap
---
source: specta-jsonschema/tests/enums.rs
assertion_line: 224
expression: value
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "$defs": {
    "AdjacentlyTagged": {
      "title": "AdjacentlyTagged",
      "oneOf": [
        {
          "type": "object",
          "properties": {
            "t": {
              "const": "UnitVariant"
            }
          },
          "required": [
            "t"
          ]
        },
        {
          "type": "object",
          "properties": {
            "t": {
              "const": "WithData"
            },
            "c": {
              "type": "string"
            }
          },
          "required": [
            "t",
            "c"
          ]
        },
        {
          "type": "object",
          "properties": {
            "t": {
              "const": "WithStruct"
            },
            "c": {
              "type": "object",
              "properties": {
                "x": {
                  "type": "integer",
                  "format": "int32"
                },
                "y": {
                  "type": "integer",
                  "format": "int32"
                }
              },
              "required": [
                "x",
                "y"
              ]
            }
          },
          "required": [
            "t",
            "c"
          ]
        }
      ]
    }
  }
}
